--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -2,6 +2,14 @@
 
 =head2 Summary 6.6.0
 
+This release of Dada Mail focuses on three main features: 
+
+=item * Sending Error Detection and Reporting
+
+=item * Redesigned Membership Screen or List OWners
+
+=item * New RESTful API for Subscriptions
+
 =head2 Features
 
 =head3 Mass Mailing Enhancements: Sending Error Detection and Reporting
@@ -12,7 +20,7 @@ Dada Mail is now tuned to catch addresses causing problems and perform some inte
 
 =head4 Problems?! Try again.
 
-If a message to an address is not sending out correctly, Dada Mail will now wait a small perioud of time (a few seconds), and try sending twice more. This should help with any I<very> temporary problems dealing with your mail system itself (your own MTA, an outside SMTP server, or service like Amazon SES). Hey, things happen, every once in awhile. The idea is that brief hiccups on your end, shouldn't mean a subscriber misses receiving a message from you. 
+If a message to an address is not sending out correctly, Dada Mail will now wait a small period of time (a few seconds), and try sending twice more. This should help with any I<very> temporary problems dealing with your mail system itself (your own MTA, an outside SMTP server, or service like Amazon SES). Hey, things happen, every once in awhile. The idea is that brief hiccups on your end, shouldn't mean a subscriber misses receiving an important message from you.
 
 =head4 Still having problems? Give it a rest and try again, one more time
 
@@ -22,9 +30,11 @@ After this wait, Dada Mail will start its mass mailing process at the address th
 
 =head4 Sending Error? Log and Report.
 
-This is marked improvement over what Dada Mail has done in the past: basically do nothing very intelligent when an address fails during sending. Addresses that fail are now reported, using the Tracker plugin, which allows you to see exactly which addresses are causing problems (this data can be exported as a .csv file, as well!) and what percentage of your total mailing list is having problems with sending errors. 
+This is a marked improvement over what Dada Mail has done in the past: basically do nothing very intelligent when an address fails during sending. Addresses that fail are now reported, using the Tracker plugin, which allows you to see exactly which addresses are causing problems (this data can be exported as a .csv file, as well!) and what percentage of your total mailing list is having problems with sending errors. 
 
-Now that you know this information, you can then take some action to fix it. The majority of problems on cheap, shared hosting platforms is mass mailing I<speed>: you're sending too fast. This is also the eaisest problem to fix, as Dada Mail supports changing how fast a mass mailing goes out, through it's batch sending system. For more complicated problems, you can then look in Dada Mail's error logs for more details - Dada Mail's Log Viewer plugin also makes this easy.
+Now that you know this information, you can then take some action to fix it. The majority of problems on cheap, shared hosting platforms are related to mass mailing I<speed>: you're sending too fast. 
+
+This is also the eaisest types of problem sto fix, as Dada Mail supports changing how fast a mass mailing goes out, through it's batch sending system. For more complicated problems, you can then look in Dada Mail's error logs for more details - Dada Mail's Log Viewer plugin also makes this easy.
 
 =head4 Track it. 
 
@@ -96,6 +106,16 @@ The Profile tab allows you to work with the Subscriber's Profile. Dada Mail's Pr
 
 These fields can be edited by the user themselves, as well as in this tab. You may also change the password used by your user to access their own information. 
 
+=head3 RESTful Subscription Interface EXPERIMENTAL
+
+Dada Mail has a new B<EXPERIMENTAL> RESTful interface to its mailing list subscription system, which should allow you to use it as a service in another app of yours. For more information, see the Subscription Cookbook docs: 
+
+L<http://dadamailproject.com/d/COOKBOOK-subscriptions.pod.html>
+
+Examples of how to use this API are included, written in JavaScript and Perl. A fully-functioning demo, complete with all the trimmings is also included in this release, that you may use to explore the service.
+
+Earlier REST and SOAP experimental client/server scripts, located in the I<dada/extras/scripts/subscribe> have now been removed. For this new RESTful interface, no additional scripts are needed to be installed. 
+
 =head3 Administration Screen changes
 
 Changes have been made to the, B<Administration> screen - if you are already logged into a mailing list, you'll be redirected to the default list control panel screen (usually, B<Send a Message>), rather than to the Administration screen, that simply I<tells> you you're logged in and provides a link to go this same screen. 
@@ -139,6 +159,14 @@ The JSON CPAN modules are used heavily in Dada Mail, but is not installed by def
 It's still suggested to install the JSON Perl module yourself to get the XS-version for speed, either manually, or using cpan/cpanmin
 
 =head2 Changes 6.6.0
+
+=head3 The Dada Mail Manual
+
+The Dada Mail Manual has been updated to reflect the major overhaul fo the B<Membership> list control panel screen. 
+
+The, B<Using Tracker> chapter has also been updated to reflect the new features in this released (logging and reporting Sending Errors)
+
+The, B<Mailing Sending - Options> screen has also been updated to reflect the current options available. 
 
 =head3 Profile Fields
 
