Fix this right up,

--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -8,7 +8,7 @@ This release of Dada Mail focuses on three main features:
 
 =item * Sending Error Detection and Reporting
 
-=item * Redesigned Membership Screen or List OWners
+=item * Redesigned Membership Admin Screen
 
 =item * New RESTful API for Subscriptions
 
